--- a/templates/new-game.html
+++ b/templates/new-game.html
@@ -8,16 +8,16 @@
       <h2 class="page-head"> - New Game - </h2>
       <a class="option" href="{{ url_for('gender') }}">
         <h1 class="icon">G</h1>
-        <p class="text">Noun Genders. Test your knowledge of noun genders. </p>
+        <p class="text">Nomen Geschlecht. Test your knowledge of noun genders. </p>
       </a>
       <a class="option" href="{{ url_for('prepositions') }}">
         <h1 class="icon">P</h1>
-        <p class="text">Prepositions. Test your knowledge of preposition cases.
+        <p class="text">Präpositionen. Test your knowledge of preposition cases.
         </p>
       </a>
-      <a class="option" href="{{ url_for('articles') }}">
-        <h1 class="icon">A</h1>
-        <p class="text">Articles. Test your knowledge of definite, indefinite and possesive articles. </p>
+      <a class="option" href="{{ url_for('endings') }}">
+        <h1 class="icon">E</h1>
+        <p class="text">Nomen Endungen und Geschlechtsmuster. Practice recognizing the patterns which can identify noun genders. </p>
       </a>
   </div>
 </div>
