--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -3,6 +3,7 @@
 html, body { width: 100%; height: 100%; background-color: ivory; }
 .content-container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: flex-start; }
 .content { background-color: ivory; width: 75%; display: flex; justify-content: center; flex-wrap: wrap; }
+.cap { text-transform: capitalize; }
 
 
 /* Nav Bar */
@@ -48,20 +49,28 @@ td, th { padding: 30px; }
 .message-container { text-align: right; }
 .tip { font-size: 0.8em; width: 100%; }
 /* Question Display */
-.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; font-size: 1.6em; margin-bottom: 20px; }
+.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; font-size: 1.6em; }
 .correct { color: green; font-style: normal; }
 .incorrect { color: red; font-style: normal; }
+.hint { width: 100%; margin-bottom: 20px; text-align: center; }
 /* Selection Options */
 .choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; margin-bottom: 25px; }
 .choice { margin: 15px; border: black solid 2px; padding: 8px; text-align: center; height: 50px; font-size: 1.4em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
 .choice:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .choice:hover { cursor: pointer; font-style: bold; border-top:  black solid 2px; border-right: black solid 2px; border-bottom: black solid 4px; border-left: black solid 4px; }
 /* Menu Options */
-.note { font-style: italic; margin-bottom: 10px; }
+.note { font-style: italic; margin-bottom: 30px; }
 .controls { display: flex; justify-content: space-between; width: 85%; }
 .control { margin: 15px; color: black; border: black solid 2px; padding: 5px; height: 40px; width: 100px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: normal; vertical-align: middle; }
 .control:hover { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .results { color: inherit; text-decoration: none; }
+.info-btn { width: 150px; }
+/* Game Info Overlay */
+.overlay { position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer; }
+.info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); -ms-transform: translate(-50%,-50%); text-align: center;
+                  border: white 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
+.info-head { font-size: 2em; background-color: rgb(85, 85, 85); width: 100%; padding: 10px; text-align: center; color: gold; margin-bottom: 25px; }
+.info-text { font-size: 1.2em; text-align: left; text-indent: 25px; }
 
 
 /* Game: Prepositions */
@@ -79,10 +88,17 @@ td, th { padding: 30px; }
 .das { background-color: lightyellow; width: 100px; }
 
 /* Game: Endings */
-.no-blank { margin-left: 15px; }
 .mann { background-color: lightblue; width: 150px; }
 .weib { background-color: lightcoral; width: 150px; }
 .neut { background-color: lightyellow; width: 150px; }
+
+/* Game: Articles */
+.art-question { margin-right: 15px; }
+.rand-a { background-color: lightblue; width: 160px; }
+.rand-b { background-color: lightcoral; width: 160px; }
+.rand-c { background-color: lightyellow; width: 160px; }
+.rand-d { background-color: lightgray; width: 160px; }
+
 
 
 /* POTENTIAL FORM CSS
