altered html templated to reflect new parent template 'game-layout'

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,7 +1,8 @@
-{% extends "layout.html" %}
+{% extends "game-layout.html" %}
+
 {% block title %}Articles{% endblock %}
 
-{% block content %}
+{% block gameSpecific %}
 <div class="content-container">
   <div class="content">
     <div class="information">
@@ -12,26 +13,21 @@
       </div>
     </div>
     <div class="word-display">
-      <h1 class="prep"></h1>
-      <h1 class="prep-case">ist _____</h1>
+      <h1 class="current art-question"></h1>
+      <h1 class="blank">_____</h1>
     </div>
     <div class="choices">
       <div>
-        <div class="choice akk">1. Accusative</div>
-        <div class="choice dat">2. Dative</div>
+        <div class="choice rand-a"></div>
+        <div class="choice rand-b"></div>
       </div>
       <div>
-        <div class="choice mix">3. Two-Way</div>
-        <div class="choice gen">4. Genitive</div>
+        <div class="choice rand-c"></div>
+        <div class="choice rand-d"></div>
       </div>
     </div>
-    <p class="gender-note">Tip: Play using the keyboard. Enter for Next.</p>
-    <div class="controls">
-      <a class="control results" href="{{ url_for('results') }}">Results</a>
-      <div class="control next">Next</div>
-    </div>
-  </div>
-</div>
+{% endblock %}
+{% block scripts %}
 <script src="../static/scripts/articles.js"></script>
 <script src="../static/scripts/games.js"></script>
 {% endblock %}
