--- a/templates/endings.html
+++ b/templates/endings.html
@@ -1,8 +1,8 @@
-{% extends "layout.html" %}
+{% extends "game-layout.html" %}
 
 {% block title %}Geschlechtsmuster{% endblock %}
 
-{% block content %}
+{% block gameSpecific %}
 <div class="content-container">
   <div class="content">
       <div class="information">
@@ -16,18 +16,14 @@
         <h1 class="current"></h1>
         <h1 class="no-blank blank"></h1>
       </div>
+      <h4 class="hint"></h4>
       <div class="choices">
-        <div class="choice mann">1. Männliche</div>
-        <div class="choice weib">2. Weibliche</div>
+        <div class="choice mann">1. Maskulin</div>
+        <div class="choice weib">2. Feminin</div>
         <div class="choice neut">3. Neutral</div>
       </div>
-      <p class="note">Tip: Play using the keyboard. Enter for Next.</p>
-      <div class="controls">
-        <a class="control results" href="{{ url_for('results') }}">Results</a>
-        <div class="control next">Next</div>
-      </div>
-  </div>
-</div>
+{% endblock %}
+{% block scripts %}
 <script src="../static/scripts/endings.js"></script>
 <script src="../static/scripts/games.js"></script>
 {% endblock %}
