minor changes to descriptions and formatting

--- a/templates/new-game.html
+++ b/templates/new-game.html
@@ -19,6 +19,10 @@
         <h1 class="icon">E</h1>
         <p class="text">Nomen Endungen und Geschlechtsmuster. Practice recognizing the patterns which can identify noun genders. </p>
       </a>
+      <a class="option" href="{{ url_for('articles') }}">
+        <h1 class="icon">A</h1>
+        <p class="text">Artikel. Given the case, gender and article type, choose the correct article. </p>
+      </a>
   </div>
 </div>
 <script src="../static/scripts/new-game.js"></script>
