--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Prepositions{% endblock %}
+{% block title %}Results{% endblock %}
 
 {% block content %}
 <div class="content-container">
