removed pre-written button text in favor of js generated button text

--- a/templates/endings.html
+++ b/templates/endings.html
@@ -18,9 +18,9 @@
       </div>
       <h4 class="hint"></h4>
       <div class="choices">
-        <div class="choice mann">1. Maskulin</div>
-        <div class="choice weib">2. Feminin</div>
-        <div class="choice neut">3. Neutral</div>
+        <div class="choice mann"></div>
+        <div class="choice weib"></div>
+        <div class="choice neut"></div>
       </div>
 {% endblock %}
 {% block scripts %}
