--- a/templates/gender.html
+++ b/templates/gender.html
@@ -18,9 +18,9 @@
       </div>
       <h4 class="hint"></h4>
       <div class="choices">
-        <div class="choice der">1. der</div>
-        <div class="choice die">2. die</div>
-        <div class="choice das">3. das</div>
+        <div class="choice der"></div>
+        <div class="choice die"></div>
+        <div class="choice das"></div>
       </div>
 {% endblock %}
 {% block scripts %}
