--- a/templates/prepositions.html
+++ b/templates/prepositions.html
@@ -19,12 +19,12 @@
     <h4 class="hint"></h4>
     <div class="choices">
       <div>
-        <div class="choice akk">1. Accusative</div>
-        <div class="choice dat">2. Dative</div>
+        <div class="choice akk"></div>
+        <div class="choice dat"></div>
       </div>
       <div>
-        <div class="choice mix">3. Two-Way</div>
-        <div class="choice gen">4. Genitive</div>
+        <div class="choice mix"></div>
+        <div class="choice gen"></div>
       </div>
     </div>
 {% endblock %}
