--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -68,7 +68,7 @@ td, th { padding: 30px; }
 /* Game Info Overlay */
 .overlay { position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer; }
 .info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); -ms-transform: translate(-50%,-50%); text-align: center;
-                  border: white 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
+                  border: rgb(85, 85, 85) 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
 .info-head { font-size: 2em; background-color: rgb(85, 85, 85); width: 100%; padding: 10px; text-align: center; color: gold; margin-bottom: 25px; }
 .info-text { font-size: 1.2em; text-align: left; text-indent: 25px; }
 
