moved individual game scripts into HTML documents, and moved game data to python lists which are sent by the server

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -27,7 +27,32 @@
       </div>
     </div>
 {% endblock %}
+
 {% block scripts %}
-<script src="../static/scripts/articles.js"></script>
-<script src="../static/scripts/games.js"></script>
+  <script type="text/javascript" src="../static/scripts/games.js"></script>
+  <script type="text/javascript">
+    // Custom functions and data for this gametype
+    let articleTypes = ["definite", "indefinite"];
+    let genders = ["masculine", "feminine", "neutral", "plural"];
+    let cases = ["nominitive", "accusative", "dative", "genitive"];
+    let blank = "_____";
+
+    function generateQuestion(item) {
+      let question = `<span class="cap">${genders[item[2]]}</span> ${articleTypes[item[1]]} article in ${cases[item[3]]}: `;
+      return question;
+    }
+
+    function answerDisplay(answer, correctness) {
+      if (correctness) {
+        document.querySelectorAll('.blank')[0].innerHTML = `<em class='correct'>${game.key[answer]}</em>`;
+        document.querySelectorAll('.message')[0].innerHTML = `Correct! You chose <em class='correct'>${game.key[answer]}</em>.`;
+      } else {
+        document.querySelectorAll('.blank')[0].innerHTML = `<em class='incorrect'>${game.key[game.current[0]]}</em>`;
+        document.querySelectorAll('.message')[0].innerHTML = `Incorrect. You chose <em class='incorrect'>${game.key[answer]}</em>.`;
+      };
+    };
+
+    let record = new questionRecord();
+    let game = new PageState('{{ gameType }}', JSON.parse('{{ wordSet|tojson|safe }}'), JSON.parse('{{ key|tojson|safe }}'));
+  </script>
 {% endblock %}
