--- a/templates/prepositions.html
+++ b/templates/prepositions.html
@@ -28,7 +28,24 @@
       </div>
     </div>
 {% endblock %}
+
 {% block scripts %}
-<script src="../static/scripts/prepositions.js"></script>
-<script src="../static/scripts/games.js"></script>
+  <script type="text/javascript" src="../static/scripts/games.js"></script>
+  <script type="text/javascript">
+    // Custom functions and data for this gametype
+    let blank = "ist _____";
+    
+    function answerDisplay(answer, correctness) {
+      if (correctness) {
+        document.querySelectorAll('.blank')[0].innerHTML = `ist <em class='correct'>${game.key[answer]}</em>`;
+        document.querySelectorAll('.message')[0].innerHTML = `Correct! You chose <em class='correct'>${game.key[answer]}</em>.`;
+      } else {
+        document.querySelectorAll('.blank')[0].innerHTML = `ist <em class='incorrect'>${game.key[game.current[0]]}</em>`;
+        document.querySelectorAll('.message')[0].innerHTML = `Incorrect. You chose <em class='incorrect'>${game.key[answer]}</em>.`;
+      };
+    };
+
+    let record = new questionRecord();
+    let game = new PageState('{{ gameType }}', JSON.parse('{{ wordSet|tojson|safe }}'), JSON.parse('{{ key|tojson|safe }}'));
+  </script>
 {% endblock %}
