--- a/templates/game-layout.html
+++ b/templates/game-layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='UTF-8'/>
+    <meta name="viewport" content="initial-scale=1, width=device-width"/>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style/styles.css') }}">
   </head>
@@ -26,11 +27,11 @@
     {% endblock %}
       <p class="note">Tip: Play using the keyboard. Enter for Next.</p>
       <div class="controls">
-        <a class="control results" href="{{ url_for('results') }}">Results</a>
-        <div class="control info-btn">Game Info</div>
-        <div class="control next">Next</div>
+        <a class="control results" onclick="game.storeResults()" href="{{ url_for('results') }}">Results</a>
+        <div class="control info-btn" onclick="game.toggleOverlay()">Game Info</div>
+        <div class="control next" onclick="game.resetFields()">Next</div>
       </div>
-      <div class="overlay">
+      <div class="overlay" onclick="game.toggleOverlay()">
         <div class="info-container">
           <h1 class="info-head">Game Information </h1>
           <p class="info-text">Use the keys 1 to 4 to play with the keyboard, press Enter for next. Score is displayed in the upper left
@@ -39,7 +40,13 @@
         </div>
       </div>
     </div>
-    {% block scripts %}
+    {% block uniqueJS %}
     {% endblock %}
+    <script type="text/javascript" src="../static/scripts/games.js"></script>
+    <script type="text/javascript">
+      let record = new questionRecord();
+      let game = new PageState('{{ gameType }}', JSON.parse('{{ wordSet|tojson|safe }}'), JSON.parse('{{ key|tojson|safe }}'));
+      setHotkeys();
+    </script>
   </body>
 </html>
