--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -2,31 +2,31 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 html, body { width: 100%; height: 100%; background-color: ivory; }
 .content-container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: flex-start; }
-.content { background-color: ivory; width: 75%; display: flex; justify-content: center; flex-wrap: wrap; }
+.content { background-color: ivory; width: 75%; display: flex; justify-content: center; flex-wrap: wrap; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 12px;}
 .cap { text-transform: capitalize; }
 
 
 /* Nav Bar */
-.navbar-container { background-color: rgb(85, 85, 85); width: 100%; padding: 15px 0; border-bottom: rgb(218, 217, 210) solid 2px; display: flex; justify-content: center; }
+.navbar-container { background-color: rgb(85, 85, 85); width: 100%; padding: 15px 0; display: flex; justify-content: center; margin-bottom: 10px; box-shadow: 0 0 6px 3px; font-size: 12px; }
 .navbar { width: 75%; background-color: rgb(85, 85, 85); padding: 0px 20px 0px 20px; overflow: hidden; display: flex; justify-content: space-between; }
-.navlogo { padding-top: 5px; font-size: 2em; text-decoration: none; }
+.navlogo { padding-top: 5px; font-size: 3em; text-decoration: none; }
 .navlogo:hover { cursor: pointer; color: inherit; text-decoration: none; }
 .logoder { color: black; }
 .logodie { color: red; }
 .logodas { color: gold; }
-.navlinks a { float: right; color: gold; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px; }
+.navlinks a { float: left; color: gold; text-align: center; padding: 12px 14px; text-decoration: none; font-size: 1.4em; font-family: Verdana, Geneva, Tahoma, sans-serif }
 .navlinks a:hover { background-color: #ddd; color: black; }
 .navlinks a.active { background-color: black; color: gold; }
 .navlinks a.active:hover { background-color: #ddd; color: black; }
 
 
 /* Page: New Game */
-.page-head { font-family: 'Montserat', 'Cursive'; font-size: 3em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; text-align: center; }
+.page-head { font-size: 4em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; text-align: center; }
 .option { border: black solid 3px; width: 75%; height: 150px; text-align: center; align-items: center; padding: 10px 0px 10px 20px; margin: 0px 0px 30px 0px; display: flex; color: black; text-decoration: none; border-radius: 4px; }
 .option:hover { border-top: black solid 3px; border-right: black solid 3px; border-bottom: black solid 5px; border-left: black solid 4px; cursor: pointer; }
 .option:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; margin: 0px 10px 0px 0px; }
-.text { font-size: 1.4em; padding: 23px; width: 80%; }
+.text { font-size: 1.6em; padding: 23px; width: 80%; text-align: left; }
 
 /* Page: Results */
 /* Upper Info */
@@ -49,102 +49,62 @@ td, th { padding: 30px; }
 .message-container { text-align: right; }
 .tip { font-size: 0.8em; width: 100%; }
 /* Question Display */
-.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; font-size: 1.6em; }
+.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; font-size: 1.8em; }
 .correct { color: green; font-style: normal; }
 .incorrect { color: red; font-style: normal; }
 .hint { width: 100%; margin-bottom: 20px; text-align: center; }
 /* Selection Options */
 .choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; margin-bottom: 25px; }
-.choice { margin: 15px; border: black solid 2px; padding: 8px; text-align: center; height: 50px; font-size: 1.4em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
+.choice { margin: 15px; border: black solid 2px; padding: 8px 15px; height: 50px; text-align: center; font-size: 1.6em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
 .choice:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
-.choice:hover { cursor: pointer; font-style: bold; border-top:  black solid 2px; border-right: black solid 2px; border-bottom: black solid 4px; border-left: black solid 4px; }
+.choice:hover { cursor: pointer; font-style: bold; border-top: black solid 2px; border-right: black solid 2px; border-bottom: black solid 4px; border-left: black solid 4px; }
 /* Menu Options */
 .note { font-style: italic; margin-bottom: 30px; }
-.controls { display: flex; justify-content: space-between; width: 85%; }
-.control { margin: 15px; color: black; border: black solid 2px; padding: 5px; height: 40px; width: 100px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: normal; vertical-align: middle; }
+.controls { display: flex; justify-content: space-between; width: 85%; flex-wrap: wrap; }
+.control { margin: 15px; color: black; border: black solid 2px; padding: 8px 15px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: normal; vertical-align: middle; }
 .control:hover { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .results { color: inherit; text-decoration: none; }
-.info-btn { width: 150px; }
 /* Game Info Overlay */
 .overlay { position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer; }
-.info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); -ms-transform: translate(-50%,-50%); text-align: center;
-                  border: rgb(85, 85, 85) 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
+.info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); -ms-transform: translate(-50%,-50%); text-align: center;                 border: rgb(85, 85, 85) 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
 .info-head { font-size: 2em; background-color: rgb(85, 85, 85); width: 100%; padding: 10px; text-align: center; color: gold; margin-bottom: 25px; }
 .info-text { font-size: 1.2em; text-align: left; text-indent: 25px; }
-
+/* Choice Button Style */
+.ansA { background-color: lightblue; }
+.ansB { background-color: lightcoral; }
+.ansC { background-color: lightyellow; }
+.ansD { background-color: lightgray; }
 
 /* Game: Prepositions */
 .prep-case { margin-left: 15px; }
-.akk { background-color: lightblue; width: 160px; }
-.dat { background-color: lightcoral; width: 160px; }
-.mix { background-color: lightyellow; width: 160px; }
-.gen { background-color: lightgray; width: 160px; }
-
-
 /* Game: Gender */
 .article { text-align: right; margin-right: 25px; }
-.der { background-color: lightblue; width: 100px; }
-.die { background-color: lightcoral; width: 100px; }
-.das { background-color: lightyellow; width: 100px; }
-
-/* Game: Endings */
-.mann { background-color: lightblue; width: 150px; }
-.weib { background-color: lightcoral; width: 150px; }
-.neut { background-color: lightyellow; width: 150px; }
-
 /* Game: Articles */
 .art-question { margin-right: 15px; }
-.rand-a { background-color: lightblue; width: 160px; }
-.rand-b { background-color: lightcoral; width: 160px; }
-.rand-c { background-color: lightyellow; width: 160px; }
-.rand-d { background-color: lightgray; width: 160px; }
 
 
+/* Login and Register Forms */
+.form-container { width: 100%; display: flex; justify-content: center; }
+.form-inline { display: flex; flex-direction: row; align-items: center; justify-content: center; width: 100%; margin-bottom: 10px; }
+.form-inline label { margin: 5px 10px 5px 0; }
+.form-inline input { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; background-color: #fff; border-top: none; border-right: none; 
+                      border-bottom: 6px solid #ccc; border-left: 6px solid #eee; border-radius: 5px; }
+.form-inline button { padding: 10px 20px; background-color: dodgerblue; border: 1px solid #ddd; color: white; cursor: pointer; }
+.form-inline button:hover { background-color: royalblue; }
+.login-btn { padding: 8px 15px; margin: 15px 0; text-align: center; }
 
-/* POTENTIAL FORM CSS
+input:focus, select:focus,
+textarea:focus, button:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; outline: none; box-shadow: 0 0 0 2pt royalblue; }
 
-.form-inline {  
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
+@media (max-width: 800px) { 
+  .form-inline input { margin: 10px 0; } 
+  .form-inline { flex-direction: column; align-items: stretch; }
+  .choices { flex-direction: column; } 
+  .content { font-size: 9px; }
+  .navbar-container { font-size: 9px; }
+  .option { width: 95%; }
+  .controls { flex-direction: row; justify-content: center; align-items: center; flex-wrap: wrap; width: 100%; }
+  .control { margin: 5px; }
+  .navbar { align-items: center; width: 100%; flex-direction: column; }
+  .navlinks { justify-content: space-evenly; }
 }
-.form-inline label {
-  margin: 5px 10px 5px 0;
-}
-.form-inline input {
-  vertical-align: middle;
-  margin: 5px 10px 5px 0;
-  padding: 10px;
-  background-color: #fff;
-  border-top: none;
-  border-right: none;
-  border-bottom: 6px solid #ccc;
-  border-left: 6px solid #eee;
-}
-.form-inline button {
-  padding: 10px 20px;
-  background-color: dodgerblue;
-  border: 1px solid #ddd;
-  color: white;
-  cursor: pointer;
-}
-.form-inline button:hover {
-  background-color: royalblue;
-}
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline-color: black;
-}
-@media (max-width: 800px) {
-  .form-inline input {
-    margin: 10px 0;
-  }
-  .form-inline {
-    flex-direction: column;
-    align-items: stretch;
-  }
-}
-
-*/
