--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/styles.css') }}">
   </head>
   <body>
-    <div class="navbar-container">
-      <nav class="navbar">
-        <a class="navlogo" href="{{ url_for('newGame') }}">
-          <span class="logoder">Der</span><span class="logodie">Die</span><span class="logodas">Das</span>
-        </a>
-        <div class="navlinks">
-          {% if request.url_rule.rule == "/about" %}
-            <a class="active" href="{{ url_for('about') }}">About</a>
-            <a href="{{ url_for('newGame') }}">New Game</a>
-          {% else %}
-            <a href="{{ url_for('about') }}">About</a>
-            <a class="active" href="{{ url_for('newGame') }}">New Game</a>
-          {% endif %}
-        </div>
-      </nav>
-    </div>
+  {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
   </body>
