altered class names for choice buttons so all would be same

--- a/templates/gender.html
+++ b/templates/gender.html
@@ -18,9 +18,9 @@
       </div>
       <h4 class="hint"></h4>
       <div class="choices">
-        <div class="choice der" onclick="game.interpretChoice(this)"></div>
-        <div class="choice die" onclick="game.interpretChoice(this)"></div>
-        <div class="choice das" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansA" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansB" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansC" onclick="game.interpretChoice(this)"></div>
       </div>
 {% endblock %}
 {% block uniqueJS %}
