--- a/templates/prepositions.html
+++ b/templates/prepositions.html
@@ -19,12 +19,12 @@
     <h4 class="hint"></h4>
     <div class="choices">
       <div>
-        <div class="choice akk" onclick="game.interpretChoice(this)"></div>
-        <div class="choice dat" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansA" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansB" onclick="game.interpretChoice(this)"></div>
       </div>
       <div>
-        <div class="choice mix" onclick="game.interpretChoice(this)"></div>
-        <div class="choice gen" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansC" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansD" onclick="game.interpretChoice(this)"></div>
       </div>
     </div>
 {% endblock %}
