--- a/templates/articles.html
+++ b/templates/articles.html
@@ -18,12 +18,12 @@
     </div>
     <div class="choices">
       <div>
-        <div class="choice rand-a" onclick="game.interpretChoice(this)"></div>
-        <div class="choice rand-b" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansA" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansB" onclick="game.interpretChoice(this)"></div>
       </div>
       <div>
-        <div class="choice rand-c" onclick="game.interpretChoice(this)"></div>
-        <div class="choice rand-d" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansC" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansD" onclick="game.interpretChoice(this)"></div>
       </div>
     </div>
 {% endblock %}
