--- a/templates/endings.html
+++ b/templates/endings.html
@@ -18,9 +18,9 @@
       </div>
       <h4 class="hint"></h4>
       <div class="choices">
-        <div class="choice mann" onclick="game.interpretChoice(this)"></div>
-        <div class="choice weib" onclick="game.interpretChoice(this)"></div>
-        <div class="choice neut" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansA" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansB" onclick="game.interpretChoice(this)"></div>
+        <div class="choice ansC" onclick="game.interpretChoice(this)"></div>
       </div>
 {% endblock %}
 {% block uniqueJS %}
