--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -23,7 +23,7 @@ html, body { width: 100%; height: 100%; background-color: ivory; }
 /* Page: New Game */
 .page-head { font-size: 4em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; text-align: center; }
 .option { border: black solid 3px; width: 75%; height: 150px; text-align: center; align-items: center; padding: 10px 0px 10px 20px; margin: 0px 0px 30px 0px; display: flex; color: black; text-decoration: none; border-radius: 4px; }
-.option:hover { border-top: black solid 3px; border-right: black solid 3px; border-bottom: black solid 5px; border-left: black solid 4px; cursor: pointer; }
+.option:hover {  box-shadow: -5px 7px 6px 1px rgb(85, 85, 85); cursor: pointer; }
 .option:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; margin: 0px 10px 0px 0px; }
 .text { font-size: 1.6em; padding: 23px; width: 80%; text-align: left; }
@@ -57,7 +57,7 @@ td, th { padding: 30px; }
 .choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; margin-bottom: 25px; }
 .choice { margin: 15px; border: black solid 2px; padding: 8px 15px; height: 50px; text-align: center; font-size: 1.6em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
 .choice:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
-.choice:hover { cursor: pointer; font-style: bold; border-top: black solid 2px; border-right: black solid 2px; border-bottom: black solid 4px; border-left: black solid 4px; }
+.choice:hover { cursor: pointer; font-style: bold; box-shadow: -4px 4px 6px -1px; }
 /* Menu Options */
 .note { font-style: italic; margin-bottom: 30px; }
 .controls { display: flex; justify-content: space-between; width: 85%; flex-wrap: wrap; }
@@ -103,6 +103,7 @@ textarea:focus, button:focus { border-bottom: 6px solid royalblue; border-left: 
   .content { font-size: 9px; }
   .navbar-container { font-size: 9px; }
   .option { width: 95%; }
+  .text { padding: 23px 10px; }
   .controls { flex-direction: row; justify-content: center; align-items: center; flex-wrap: wrap; width: 100%; }
   .control { margin: 5px; }
   .navbar { align-items: center; width: 100%; flex-direction: column; }
