added new templates for login, registration, user profile and error messages, updated js section in other templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,5 +3,9 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-  <div class="content-container"></div>
+  <div class="content-container">
+  </div>
+  <script type="text/javascript">
+    document.getElementById("about").classList.add('active');
+  </script>
 {% endblock %}
