--- a/templates/gender.html
+++ b/templates/gender.html
@@ -25,11 +25,10 @@
 {% endblock %}
 {% block uniqueJS %}
   <script type="text/javascript">
-    let genders = ["masculine", "feminine", "neutral"];
     let blank = "____";
-    let suffixLists = [ [["schluss", "schlag"], ["ismus"], ["ling", "name", "gang", "fall", "korb"], ["tag", "ant", "zug", "ent", "ich", "ist"], ["or", "us", "er", "en", "ig", "er"], []],
-                    [["schaft", "nummer"], [""], ["heit", "keit", "bahn"], ["nis", "ion", "tät", "ung", "uhr", "enz", "anz", "art"], ["ei", "ie", "ik", "ur"], ["e"]], 
-                    [["zimmer"], [], ["chen", "lein", "ment", "haus", "zeug", "land"], ["erl", "nis", "rad", "weh", "amt"], ["um" ,"ma"], []]];          
+    let suffixLists = { der: [["schluss", "schlag"], ["ismus"], ["ling", "name", "gang", "fall", "korb"], ["tag", "ant", "zug", "ent", "ich", "ist"], ["or", "us", "er", "en", "ig", "er"], []],
+                        die: [["schaft", "nummer"], [""], ["heit", "keit", "bahn"], ["nis", "ion", "tät", "ung", "uhr", "enz", "anz", "art"], ["ei", "ie", "ik", "ur"], ["e"]], 
+                        das: [["zimmer"], [], ["chen", "lein", "ment", "haus", "zeug", "land"], ["erl", "nis", "rad", "weh", "amt"], ["um" ,"ma"], []] };          
 
     function testSuffixes(word, suffixList) {
       var len = suffixList.length;
@@ -41,11 +40,10 @@
       };
       return null;
     };
-
     function suffixDisplay() {
-      let suffix = testSuffixes(game.current[1], suffixLists[game.current[0]])
+      let suffix = testSuffixes(game.current["qinfo_1"], suffixLists[`${game.current["answer"].toLowerCase()}`])
       if (suffix) {
-        return `Tip: Words ending in <strong>-${suffix}</strong> are often ${genders[game.current[0]]}.`;
+        return `Tip: Words ending in <strong>-${suffix}</strong> are often ${game.current["answer"]} words.`;
       } else {
         return "";
       }
