--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,7 @@
       <a href="{{ url_for('register') }}">Don't have an account? Register here.</a>
     </div>
   </div>
+  <script type="text/javascript">
+    document.getElementById("login").classList.add('active');
+  </script>
 {% endblock %}
