--- a/templates/register.html
+++ b/templates/register.html
@@ -18,4 +18,7 @@
       </form>
     </div>
   </div>
+  <script type="text/javascript">
+    document.getElementById("login").classList.add('active');
+  </script>
 {% endblock %}
