--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -4,6 +4,8 @@ html, body { width: 100%; height: 100%; background-color: ivory; }
 .content-container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: flex-start; }
 .content { background-color: ivory; width: 75%; display: flex; justify-content: center; flex-wrap: wrap; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 12px;}
 .cap { text-transform: capitalize; }
+header { width: 100; display: flex; justify-content: center; }
+.flash-alert { font-size: 1.4em; padding: 10px; width: 75%; background-color: lightgreen; color: black; text-align: center; }
 
 
 /* Nav Bar */
@@ -12,6 +14,7 @@ html, body { width: 100%; height: 100%; background-color: ivory; }
 .navlogo { padding-top: 5px; font-size: 3em; text-decoration: none; }
 .navlogo:hover { cursor: pointer; color: inherit; text-decoration: none; }
 .logoder { color: black; }
+
 .logodie { color: red; }
 .logodas { color: gold; }
 .navlinks a { float: left; color: gold; text-align: center; padding: 12px 14px; text-decoration: none; font-size: 1.4em; font-family: Verdana, Geneva, Tahoma, sans-serif }
@@ -27,6 +30,7 @@ html, body { width: 100%; height: 100%; background-color: ivory; }
 .option:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; margin: 0px 10px 0px 0px; }
 .text { font-size: 1.6em; padding: 23px; width: 80%; text-align: left; }
+.games-container { margin-bottom: 25px; }
 
 /* Page: Results */
 /* Upper Info */
@@ -87,17 +91,32 @@ td, th { padding: 30px; }
 .form-container { width: 100%; display: flex; justify-content: center; }
 .form-inline { display: flex; flex-direction: row; align-items: center; justify-content: center; width: 100%; margin-bottom: 10px; }
 .form-inline label { margin: 5px 10px 5px 0; }
-.form-inline input { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; background-color: #fff; border-top: none; border-right: none; 
+.form-inline .rego { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; background-color: #fff; border-top: none; border-right: none; 
                       border-bottom: 6px solid #ccc; border-left: 6px solid #eee; border-radius: 5px; }
 .form-inline button { padding: 10px 20px; background-color: dodgerblue; border: 1px solid #ddd; color: white; cursor: pointer; }
 .form-inline button:hover { background-color: royalblue; }
 .login-btn { padding: 8px 15px; margin: 15px 0; text-align: center; }
 
-input:focus, select:focus,
+.rego:focus, select:focus,
 textarea:focus, button:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; outline: none; box-shadow: 0 0 0 2pt royalblue; }
 
+/* Profile Page */
+.row-perfect { background-color: lightgreen; }
+.row-good { background-color: rgb(255, 231, 122); }
+.row-poor { background-color:  orange; }
+.row-zero { background-color: lightcoral; }
+.filter-menu { width: 75%; border: black solid 2px; padding: 5px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: 32px; vertical-align: middle; height: 150px; }
+.all-res { height: 47px; }
+.rangeslider{ width: 50%; }
+.myslider { -webkit-appearance: none; background: #FCF3CF; width: 75%; height: 30px; opacity: 2; outline: red; }
+.myslider:hover { opacity: 1; }
+.myslider::-webkit-slider-thumb { -webkit-appearance: none; cursor: pointer; background: #34495E; width: 10%; height: 30px; }
+
+
+
+
 @media (max-width: 800px) { 
-  .form-inline input { margin: 10px 0; } 
+  .form-inline .rego { margin: 10px 0; } 
   .form-inline { flex-direction: column; align-items: stretch; }
   .choices { flex-direction: column; } 
   .content { font-size: 9px; }
