--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,6 +9,7 @@
             <a id="new-game" href="{{ url_for('newGame') }}">New Game</a>
             {% if session %}
             <a id="profile" href="{{ url_for('profile') }}">Profile</a>
+            <a id="profile" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
             <a id="login" href="{{ url_for('login') }}">Login</a>
             {% endif %}
