--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -97,21 +97,43 @@ td, th { padding: 30px; }
 .form-inline button:hover { background-color: royalblue; }
 .login-btn { padding: 8px 15px; margin: 15px 0; text-align: center; }
 
-.rego:focus, select:focus,
-textarea:focus, button:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; outline: none; box-shadow: 0 0 0 2pt royalblue; }
+.rego:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; outline: none; box-shadow: 0 0 0 2pt royalblue; }
 
 /* Profile Page */
+.profile-content { width: 85%; }
+#profile-menu { display: flex; flex-direction: column; flex-wrap: wrap; width: 100%; margin-top: 25px; }
+#profile-top { display: inline-flex; width: 100%; padding: 10px; }
+#profile-top > div { width: 33%; text-align: center; background-color: rgb(255, 250, 125); font-size: 1.6em; margin-right: 10px; padding: 5px; }
+#profile-top > p { width: 67%; background-color: lightgreen; font-size: 1.2em; padding: 5px; }
+#profile-bottom { display: inline-flex; width: 100%; padding: 10px; }
+#overall { width: 33%; display: flex; flex-direction: column; background-color: lightblue; text-align: center; margin-right: 10px; padding: 5px; }
+#overall > h4 { font-size: 2em; margin-bottom: 10px; }
+#overall-data { display: flex; justify-content: center; text-align: center; }
+#overall-data > div { font-size: 2em; }
+#divider { background-color: black; width: 3px; margin-left: 15px; margin-right: 15px; }
+
+#form-container { width: 67%; display: flex; background-color: salmon; }
+#profile-form { width: 100%; display: flex; flex-direction: column; padding: 5px; }
+#form-top { width: 100%; display: inline-flex; font-size: 1.4em; margin-bottom: 10px; }
+#form-top > p { margin-right: 10px; }
+.myslider { -webkit-appearance: none; background: grey; height: 100%; width: 40%; opacity: 2; outline: red; margin-right: 10px; }
+.myslider:hover { opacity: 1; }
+.myslider::-webkit-slider-thumb { -webkit-appearance: none; cursor: pointer; background: gold; width: 5%; height: 20px; }
+#form-bottom { width: 100%; display: inline-flex; font-size: 1.4em; margin-bottom: 10px; }
+#gametype-filter { display: inline-flex; margin-right: 25px;}
+#gametype-filter > p, #gametype-filter > select { margin-right: 15px; }
+#gametype-filter > select { padding: 3px; }
+#form-submit { display: flex; }
+#filter-submit { margin-right: 15px; padding: 5px; border: black solid 2px; background-color: lightgrey; }
+#filter-submit:hover { cursor: pointer; opacity: 0.9; }
+
+/* Profile Table */
+#th-gametype:hover, #th-question:hover, #th-answer:hover,
+#th-percentage:hover, #th-attempts:hover { cursor: pointer; }
 .row-perfect { background-color: lightgreen; }
-.row-good { background-color: rgb(255, 231, 122); }
+.row-good { background-color: rgb(255, 250, 125); }
 .row-poor { background-color:  orange; }
 .row-zero { background-color: lightcoral; }
-.filter-menu { width: 75%; border: black solid 2px; padding: 5px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: 32px; vertical-align: middle; height: 150px; }
-.all-res { height: 47px; }
-.rangeslider{ width: 50%; }
-.myslider { -webkit-appearance: none; background: #FCF3CF; width: 75%; height: 30px; opacity: 2; outline: red; }
-.myslider:hover { opacity: 1; }
-.myslider::-webkit-slider-thumb { -webkit-appearance: none; cursor: pointer; background: #34495E; width: 10%; height: 30px; }
-
 
 
 
@@ -127,4 +149,8 @@ textarea:focus, button:focus { border-bottom: 6px solid royalblue; border-left: 
   .control { margin: 5px; }
   .navbar { align-items: center; width: 100%; flex-direction: column; }
   .navlinks { justify-content: space-evenly; }
+  #form-bottom { display: flex; flex-direction: column; }
+  #divider { background-color: none; margin: 0px; }
+  #overall-data { flex-direction: column; }
+  #overall-data > div { margin-bottom: 5px; }
 }
