--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,13 +5,18 @@
         </a>
         <div class="navlinks">
             <!-- class="active" -->
-            <a id="about" href="{{ url_for('about') }}">About</a>
-            <a id="new-game" href="{{ url_for('newGame') }}">New Game</a>
-            {% if session %}
-            <a id="profile" href="{{ url_for('profile') }}">Profile</a>
-            <a id="profile" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" id="about" href="{{ url_for('about') }}">About</a>
+            <a class="nav-link" id="new-game" href="{{ url_for('newGame') }}">New Game</a>
+            {% if session["current_gametype"] %}
+            <a class="nav-link" id="current-game" href="{{ url_for('run_game', gametype=session['current_gametype']) }}">Game</a>
+            {% elif session["results"] %}
+            <a class="nav-link" id="results" href="{{ url_for('results') }}">Results</a>
+            {% endif %}
+            {% if session["user_id"] %}
+            <a class="nav-link" id="profile" href="{{ url_for('profile') }}">Profile</a>
+            <a class="nav-link" id="profile" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
-            <a id="login" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link" id="login" href="{{ url_for('login') }}">Login</a>
             {% endif %}
         </div>
       </nav>
